--- a/lib/luban/deployment/packages/monit/templates/monitrc.erb
+++ b/lib/luban/deployment/packages/monit/templates/monitrc.erb
@@ -1,8 +1,8 @@
 # Monit control file
 
-# Environment: <%= env_name = "#{stage}.#{project}/#{application}" %>
+# Environment: <%= env_name %>
 # Revision: <%= revision %>
-# Created at <%= Time.now().strftime("%d/%m/%Y %H:%M:%S") %>
+# Created at <%= now %>
 
 set daemon 15 # Poll cycle length in seconds
 
